[package]
edition = "2021"
name = "iyachi"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2.12.2"
tokio = { version = "1", features = ["full"] }
image = "0.24.9"
imageproc = "0.25"
rusttype = "0.9"
reqwest = { version = "0.12", features = ["rustls-tls"] }
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
